--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <body>
 
   <H1>Now!台灣氣溫</H1>
-  本App分別以列表及地圖方式顯示高速公路即時影像。並提供(北部, 中部, 南部)道路即時事件以供使用者使用。<br>
+  本App資料取之於台灣中央氣象局的氣象資料開放平台(http://opendata.cwb.gov.tw/index)，本App只顯示氣溫資料並不會儲存任何資料。<br>
 
-  本App使用台灣政府開放資料開放平台(http://data.gov.tw/)資料，本App只顯示並無儲存圖片及影像的功能。<br>
+  本App免費。<br>
 
   
 
