Modify the file extension to png

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <img src="phone_3.png" width="124.2" height="220.8">
 
 平板
-<img src="pad_7_1.jpg" width="124.2" height="220.8">
-<img src="pad_7_2.jpg" width="124.2" height="220.8">
-<img src="pad_7_3.jpg" width="124.2" height="220.8">
-<img src="pad_7_4.jpg" width="124.2" height="220.8">
+<img src="pad_7_1.png" width="124.2" height="220.8">
+<img src="pad_7_2.png" width="124.2" height="220.8">
+<img src="pad_7_3.png" width="124.2" height="220.8">
+<img src="pad_7_4.png" width="124.2" height="220.8">
 
 
 <p><b>App Store 連結</b></p>
