Modify the title for App Store 連結 to Play Store 連結.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <img src="pad_7_4.png" width="124.2" height="220.8">
 
 
-<p><b>App Store 連結</b></p>
+<p><b>Play Store 連結</b></p>
 <a href="https://play.google.com/store/apps/details?id=jim.nowtaiwantemperature">Now!台灣氣溫</a>
 
 <br>
